<resources>
    <string name="app_name">FakeAPI</string>
    <string name="new_post">Add</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="delete">delete</string>
    <string name="refresh">Refresh</string>
    <string name="back">Back</string>
    <string name="id">ID</string>
    <string name="userId">User ID</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
</resources>